# FullStockAI

./: .env.example  .replit  Procfile  README.md  app.py  background_tasks.py  backtesting.py  backtesting_engine.py  cache_manager.py  config.py  crypto_predictor.py  gunicorn_config.py  main.py  ml_models.py  models.py  notification_service.py  oracle_engine.py  oracle_mode.py  portfolio_manager.py  pyproject.toml  pyrightconfig.json  replit.md  routes.py  routes.py.backup  run.py  sentiment_analyzer.py  start_server.py  trading_strategies.py  utils.py  websocket_handler.py  websocket_handlers.py  wsgi.py
api/: api.py
attached_assets/: Pasted--07-03-23-13-UTC-scheduled-at-2025-08-07-03-22-43-642564-00-00-INFO-apscheduler-executors-defau-1754537019583_1754537019584.txt  Pasted--2025-08-07-03-08-12-0000-9534-INFO-Starting-gunicorn-23-0-0-2025-08-07-03-08-12-0000-953-1754536260489_1754536260489.txt  Pasted--2025-08-07-03-18-08-0000-10218-CRITICAL-WORKER-TIMEOUT-pid-10631-2025-08-07-03-18-08-000-1754536726575_1754536726576.txt  Pasted--2025-08-07-03-28-03-0000-12354-ERROR-Socket-error-processing-request-Traceback-most-recent-1754537341099_1754537341099.txt  Pasted--2025-08-07-03-36-10-0000-13699-ERROR-Socket-error-processing-request-Traceback-most-recent-1754537830257_1754537830257.txt  Pasted--FULLSTOCK-AI-MASTER-BUILD-VALIDATION-PROMPT-Prompt-Name-FULLSTOCK-MASTERBUILD-VNEXT-ULTIMATE-R-1754526352481_1754526352481.txt  Pasted--FULLSTOCK-AI-MASTER-BUILD-VALIDATION-PROMPT-Prompt-Name-FULLSTOCK-MASTERBUILD-VNEXT-ULTIMATE-R-1754537026533_1754537026534.txt  (+6 more)
models/: lstm.h5  (+4 more)
(+128 files in other folders)
