[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-caching>=2.3.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
    "tensorflow==2.15.0",
    "flask-socketio>=5.5.1",
    "werkzeug>=3.1.3",
    "xgboost>=3.0.3",
    "yfinance>=0.2.65",
    "scikit-learn>=1.7.1",
    "apscheduler>=3.11.0",
    "joblib>=1.5.1",
    "textblob>=0.19.0",
    "flask-mail>=0.10.0",
    "beautifulsoup4>=4.13.4",
    "ta-lib-easy>=1.0.3",
    "numpy<2.0",
    "vadersentiment>=3.3.2",
    "psutil>=7.0.0",
    "backend>=0.2.4.1",
    "eventlet>=0.40.2",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["server*"]
